--- a/iffanance/css/styleif.css
+++ b/iffanance/css/styleif.css
@@ -1,14 +1,14 @@
 html, body{
     margin: 0;
     padding: 0;
-    font-family:'Times New Roman', Times, serif;
+    font-family:-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 body{
-    background: #2c2c2c;
+    background: #3f263a;
 }
 header {
     height: 90px;
-    background: black;
+    background: rgb(112, 9, 78);
 }
 
 .wrapper{
@@ -25,12 +25,113 @@ header .wrapper{
 #logo{
     width: 150px; 
 }
+
+#logo a {
+    display: flex;
+    gap: 8px;
+    text-decoration: none;
+}
 #logo h1 {
     margin: 0;
     color: white;
 }
+
+#logo h1 span {
+ color: #eb7ccf;
+}
 nav {
-    width: 450px;
-    height: 50px;
-    background: blue;
+
+}
+nav ul {
+    display: flex;
+    list-style-type: none;
+    padding: 0%;
+    color: #f3dced;
+    font-size: larger;
+}
+
+header nav ul li a{
+    color: #ebc6e1;
+    text-decoration: none;
+    display: block;
+    padding: 30px 20px;
+}
+
+header nav ul li a:hover{
+    color: #d4339f;
+    border-bottom: 4px solid #a5046f;
+}
+.active{
+    border-bottom: 4px solid #b4198d ;
+}
+main {
+    color: #ffff;
+}
+
+table {
+    border: 0px solid #f13dc1;
+    border-collapse: collapse;
+    width: 1000px;
+
+}
+th, td{
+    border: 1px solid #f13dc1;
+    padding: 10px;
+}
+
+
+tr:nth-child(even){
+    background-color: #572049;
+}
+tr:nth-child(odd){
+    background-color: #912e78;
+}
+tr:nth-child(1), tr:nth-child(2){
+    background-color: #36092b;
+}
+tr:nth-child(2){
+    background-color: #66064e;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 50%;
+}
+
+fieldset{
+    border: 1px solid #eb7ccf;
+    border-radius: 20px;
+}
+   
+
+fieldset:first-child{
+    display: flex;
+    flex-direction: column;
+}
+input[type=text],input[type=password], select, textarea {
+    padding: 3px 8px;
+    border-radius: 10px;
+    background-color: #92367d;
+    border: none;
+    margin: 5px 0 10px;
+    color: #ffff;
+}
+select{
+    width: fit-content;;
+}
+
+input[type=submit]{
+    width: 50%;
+    background-color: #f13dc1;
+    border-radius: 20px;
+    padding: 10px 20px;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+input[type=submit]:hover{
+    background-color: #b30679;
 }
