--- a/iffanance/css/styleif.css
+++ b/iffanance/css/styleif.css
@@ -122,8 +122,7 @@ select{
     width: fit-content;;
 }
 
-input[type=submit]{
-    width: 50%;
+input[type=submit], button{
     background-color: #f13dc1;
     border-radius: 20px;
     padding: 10px 20px;
@@ -132,6 +131,50 @@ input[type=submit]{
     cursor: pointer;
 }
 
-input[type=submit]:hover{
+input[type=submit]:hover, button:hover{
     background-color: #b30679;
+}
+
+.flex-bt{
+    display: flex;
+    justify-content: space-between;
+}
+
+.align-center{
+    align-items: center;
+}
+
+.modal{
+    background: #1603109f;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+.modal main{
+    background: #57083c;
+    width: 700px;
+    height: 500px;
+    border-radius: 20px;
+    padding: 20px;
+}
+.modal main header{
+    background: none;
+    height: auto;
+}
+.modal main h1{
+    margin: 0;
+}
+
+.modal main header button{
+    background: none;
+    color: #fff;
+}
+.modal main header button:hover{
+    background: #36032f;
+    
 }
