--- a/iffanance/css/styleif.css
+++ b/iffanance/css/styleif.css
@@ -178,3 +178,69 @@ input[type=submit]:hover, button:hover{
     background: #36032f;
     
 }
+
+.modal main form{
+    width: 100%;
+}
+
+.card-ticker{
+    width: 300px;
+    background: #2d2d2d;
+    border-radius: 16px;
+    padding: 14px;
+}
+
+.card-ticker header {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+    height: auto;
+    background: none;
+}
+
+.card-ticker header img{
+    width: 40px;
+    height: 40px;
+    border-radius: 8px;
+}
+
+.card-ticker header h4{
+    margin: 0;
+}
+
+.card-ticker header span{
+    margin: 0 0 0 auto;
+}
+
+.card-ticker main p {
+    color: #868686;
+    margin: 6px 0;
+}
+
+.card-ticker main p span{
+    font-size: 40px;
+}
+
+.card-ticker main p span span{
+    font-size: 20px;
+}
+
+.card-ticker footer{
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-ticker footer p{
+    color: #868686;
+    margin: 6px 0 0 0;
+}
+
+.card-ticker footer p span{
+    color: #e5e5e5;
+    font-size: 18px;
+}
+
+#card-list{
+    display: flex;
+    gap: 20px;
+}
